--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
+    "@vercel/speed-insights": "^1.1.0",
     "emailjs-com": "^3.2.0",
     "next": "15.0.3",
     "react": "^18.3.1",
